# andrewshub

./: README.md  ROS2_Jetson_Nano_Setup_Guide.md  ROS2_Jetson_Nano_Troubleshooting_Guide.md  Upper_Peninsula_Headquarters_Research.md  ai_robotics_advancements_report.md  android_consciousness_framework.md  android_monitoring_integration.md  autonomous_agents_research_summary.md  blockchain_ai_autonomy_analysis.md  cybersecurity_trends_2026.md  edge_computing_robotics_report.md  edge_consciousness_framework.md  embodiment_journey.md  hybrid_quantum_classical_ai.md  log_analyzer.py  memory_analysis_report.md  multi-signature-wallet-guide.md  multi_sig_wallet_guide.md  my_android_journey.md  post_quantum_crypto_framework.md  quantum_consciousness_framework_synthesis.md  sensorimotor_android_research.md  staking_reward_calculator.md  staking_reward_calculator.py  staking_reward_calculator_documentation.md  triple_loop_engine.md  wallet_setup_documentation.md  wallet_setup_guide.md
agent_workspaces/jarvis/: android_embodiment_progress.md  wallet_setup_guide.md
andrewshub/: hybrid-quantum-classical-consciousness.md  hybrid-quantum-classical-microtubule-simulation.md
andrewshub/blog/: 2026-03-29_android_embodiment_advancements.md  2026-03-29_android_embodiment_progress.md
blog/: android_embodiment_progress.md
code_sandbox/: staking_reward_calculator.py
codeforge/agent-dashboard-ros2/: .env.example  README.md  docker-compose.yml  requirements.txt
codeforge/agent-ops-dashboard/: .env.example  README.md  docker-compose.yml  package.json
codeforge/ai-skill-library-framework/: README.md  requirements.txt  setup.py
codeforge/api-rate-limiter/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  requirements.txt  tsconfig.json
codeforge/blockchain-input-validator/: README.md  requirements.txt
codeforge/code-review-analyzer/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
codeforge/crypto-rss-reader/: .env.example  Dockerfile  requirements.txt
codeforge/curiosity-budget-rl/: README.md  requirements.txt
codeforge/dyson-swarm-simulator/: README.md  setup.py
codeforge/ed25519-blockchain-ros2-verifier/: Dockerfile  README.md  requirements.txt  setup.py
codeforge/embodied-cognition-edge-sim/: Dockerfile  README.md  package.xml  requirements.txt  setup.py
codeforge/embodied-cognition-edge-sim/.github/workflows/: ci.yml
codeforge/embodied-cognition-edge-sim/config/: network_params.yaml
codeforge/embodied-cognition-edge-sim/launch/: simulation.launch.py
codeforge/embodied-cognition-edge-sim/src/embodied_edge_sim/: cognition_interface.py  data_flow_visualizer.py  decision_analyzer.py  edge_node.py  edge_processor.py  global_integrator.py  latency_model.py  network_simulator.py  node_coordinator.py  physical_interface.py  visualization_manager.py
codeforge/embodied-cognition-edge-sim/test/: test_edge_processing.py
codeforge/embodied-cognition-edge-sim/tests/: package.test.xml  requirements.test.txt  test_cognition_interface.py  test_data_flow_visualizer.py  test_decision_analyzer.py  test_edge_node.py  test_edge_processor.py  test_global_integrator.py  test_latency_model.py  test_network_simulator.py  test_node_coordinator.py  test_physical_interface.py  test_setup.py  test_simulation.launch.py  test_test_edge_processing.py  test_visualization_manager.py
codeforge/gravitational-data-processor/: .env.example  README.md  requirements.txt
codeforge/json-to-csv-converter/: README.md  requirements.txt  setup.py
codeforge/physics-informed-body-schema/: README.md  requirements.txt
codeforge/project-scaffolder/: Dockerfile  README.md  setup.py
codeforge/project-scaffolding-tool/: .env.example  Dockerfile  README.md  docker-compose.yml
codeforge/property-search-cli/: README.md  setup.py
codeforge/quantum-android-edge-framework/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
codeforge/quantum-enhanced-codonic-layer/: README.md  (+2 more)
codeforge/staking-rewards-calculator/: README.md  pyproject.toml  setup.py
codeforge/staking-rewards-calculator/.github/workflows/: ci.yml
codeforge/staking-rewards-calculator/docs/: api.md
codeforge/staking-rewards-calculator/src/: models.py  staking_calculator.py  utils.py  validators.py
codeforge/staking-rewards-calculator/tests/: requirements.test.txt  test_models.py  test_setup.py  test_staking_calculator.py  test_test_models.py  test_test_staking_calculator.py  test_test_validators.py  test_utils.py  test_validators.py
codeforge/stop-framework-skill-library/: README.md  pyproject.toml  requirements.txt  setup.py
codeforge/stop-framework-skill-library/.github/workflows/: ci.yml
codeforge/stop-framework-skill-library/examples/: basic_usage.py  skill_development.py
codeforge/stop-framework-skill-library/stop_skill_library/: __init__.py  core.py  models.py  reflection.py  security.py  self_improvement.py  skill_storage.py  version_control.py
codeforge/stop-framework-skill-library/stop_skill_library/improvement/: safety_constraints.py  self_modification.py
codeforge/stop-framework-skill-library/stop_skill_library/reflection/: analysis.py  performance_tracker.py
codeforge/stop-framework-skill-library/stop_skill_library/security/: access_control.py  validation.py
codeforge/stop-framework-skill-library/stop_skill_library/storage/: hierarchical_storage.py  version_manager.py
codeforge/stop-framework-skill-library/tests/: requirements.test.txt  test___init__.py  test_access_control.py  test_analysis.py  test_basic_usage.py  test_core.py  test_hierarchical_storage.py  test_models.py  test_performance_tracker.py  test_reflection.py  test_safety_constraints.py  test_security.py  test_self_improvement.py  test_self_modification.py  test_setup.py  test_skill_development.py  test_skill_storage.py  test_test_reflection.py  test_test_security.py  test_test_self_improvement.py  test_test_skill_storage.py  test_test_version_control.py  test_validation.py  test_version_control.py  test_version_manager.py
test/: hello.md
(+1006 files in other folders)
