<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>embodied_edge_sim</name>
  <version>1.0.0</version>
  <description>Embodied Cognition Edge Simulation Framework for ROS2</description>
  <maintainer email="maintainer@example.com">ROS2 Simulation Team</maintainer>
  <license>Apache License 2.0</license>
  <author email="author@example.com">Simulation Development Group</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclpy_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-runner</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>